welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: ')' expected but '=' found.
	if (tab[i] = value ) {return i }
                   ^indexOfValue:6: error: illegal start of simple expression
}
^