welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {

	for (i <- 0 to T.length-1)
	if (tab[i] = value ) {return i }
	
}
